--- a/app/src/main/res/layout/each_row.xml
+++ b/app/src/main/res/layout/each_row.xml
@@ -11,24 +11,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="16dp">
 
-        <TextView
-            android:id="@+id/nameTextView"
-            android:text="Name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/ageTextView"
+            <TextView
+                android:id="@+id/nameTextView"
+                android:text="Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/ageTextView"
+                android:layout_width="wrap_content"
+                android:text="Age"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:layout_marginTop="4dp"/>
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
-            android:text="Age "
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_marginTop="4dp"/>
+            android:layout_marginStart="16dp"
+            android:src="@drawable/delete_icon"
+            android:background="@android:color/transparent"
+            android:contentDescription="Delete Button" />
 
     </LinearLayout>
 
